--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -3,11 +3,11 @@
 \chapter{Magnetoelectric crankshaft: topologically protected switching in multiferroic GdMn$_2$O$_5$ \label{ch:GdMn2O5}}
 \section{Introduction}
 Efficient control and probing of robust order has historically been one of the main technological drivers for research in condensed matter.
-The hallmark example is the impact that the discovery of giant magnetoresistance has had on the efficiency of the readhead in hard disks, by using direct electrical effects rather than a solenoid \cite{Baibich1988,Binasch1989,Tsymbal2001,Nunez2006TheoryMetals,Chappert2007}.
-This is achieved by constructing the readhead as a multilayer sandwich composed of a pinned magnet, a non-magnetic metal and a soft magnet.
+The hallmark example is the impact that the discovery of giant magnetoresistance has had on the efficiency of the read-head in hard disks, by using direct electrical effects rather than a solenoid \cite{Baibich1988,Binasch1989,Tsymbal2001,Nunez2006TheoryMetals,Chappert2007}.
+This is achieved by constructing the read head as a multilayer sandwich composed of a pinned magnet, a non-magnetic metal and a soft magnet.
 The latter will align itself to the information storing magnetic domains on the platter of the hard disk.
 The resistivity of the stack then depends strongly on the mutual alignment of the pinned and soft magnets, as a result of the giant magnetoresistance.
-By applying a constant bias voltage to the readhead, the magnetically stored information can be probed electrically through the measurement of the resulting current.
+By applying a constant bias voltage to the read head, the magnetically stored information can be probed electrically through the measurement of the resulting current.
 Underlying this mechanism is the Stoner effect, causing the conducting states around the Fermi level of metallic magnets to have a well-defined spin polarization depending on the internal magnetization.
 If current flows through these metallic magnets, the carriers with aligned spins that exit the pinned magnet will be scattered strongly (leading to low conductivity) by the soft magnet if its magnetization is aligned antiparallel, and weakly when the magnetization of both is aligned (high conductivity).
 This development led to a significant increase of the efficiency of hard drives.
@@ -16,7 +16,7 @@ There remains, however, the issue of writing the information in the first place.
 In modern state-of-the art high density storage technologies, this is still done by applying an external magnetic field with an electromagnet to reorient the ferromagnetic domains. One can imagine this to be quite an inefficient process, both from the point of view of granularity (stray fields and non-locality of magnetic fields limit the minimum size of the domains) as from that of energy loss through heat dissipation.
 Improving these figures of merit drives much of the current research in the field of spintronics, with promising applications like spin-transfer torque devices \cite{Nunez2006TheorySemiconductors,Nunez2006TheoryMetals,Nunez2011, Kent2015, Jungwirth2016}.
 These use an inverse effect to the one described above.
-In thase first a current is created with carriers that have a well-defined orientation of the spin by using e.g. a pinned ferromagnet as in the readhead.
+In these first a current is created with carriers that have a well-defined orientation of the spin by using e.g. a pinned ferromagnet as in the read head.
 Subsequently, this current is forced through (or close to) a magnetic domain by the bias electric field.
 If the spin of the carriers and the magnetization of the domain are misaligned, strong scattering occurs which rotates the spin moments of the carriers.
 However, this will cause an opposite torque on the magnetization of the domain, due to the conservation of angular momentum. This transfer of torque is where the classification of {\it spin-transfer torque} devices originates from.
@@ -39,7 +39,7 @@ Magnetic order is almost exclusively caused by partially filled valence shells, 
 Ferroelectricity, on the other hand can find its origin in many microscopic effects.
 In many of them, the ferroelectricity is caused by an off-center shift of the B ion in the surrounding oxygen octahedron (see Chapter~\ref{ch:Softening} for a detailed discussion on ferroelectricity in BaTiO$_3$).
 This is due to the formation of strong covalent bonds between one (or three) oxygens and the B ion, using the latter's empty $d$ states. 
-While it is not fully understood why, the presence of any electrons in the $d$ shell of the B ion severly hampers this process which is one of the root causes for the rarity of multiferroicity in these materials, since magnetism requires at least a partial filling of the $d$ shell.
+While it is not fully understood why, the presence of any electrons in the $d$ shell of the B ion severely hampers this process which is one of the root causes for the rarity of multiferroicity in these materials, since magnetism requires at least a partial filling of the $d$ shell.
 One of the ways both orders can appear simultaneously is due to A ions that have lone pairs (filled outer $s$ shell). One example is in BiFeO$_3$, where the Bi$^{3+}$ ion harbors such a lone pair.
 This pair of $s$ electrons is highly polarizable and all align in the ferroelectric phase.
 BiFeO$_3$ is thus a clear example of a multiferroic material, however, the two orders have completely different origin and the cross-order coupling is thus extremely low.
@@ -62,7 +62,7 @@ Minimizing the energy with respect to both orders for $T<T_M,T_P$ and no applied
 Both order parameters thus depend on the value of the other through the magnetoelectric coupling $g$. This leads to a change in one when an external field is applied to the other.
 As mentioned before, however, the different microscopic origins of both orders usually result in a tiny value for $g$.
 Indeed, the effective dielectric constant $\varepsilon$ of BiMnO$_3$ only displays a weak anomaly at the ferromagnetic transition temperature, and is only weakly affected by an external magnetic field, leading to a variation of 0.6\% of $\varepsilon$ at a field value of 9\,T.
-This means that the electrical behavior of this material is almost impervious to an extern magnetic field, a clear demonstration of the problems with cross-order control in type-I multiferroics.
+This means that the electrical behavior of this material is almost impervious to an external magnetic field, a clear demonstration of the problems with cross-order control in type-I multiferroics.
 \\\\
 In an effort to improve this sought-after control, we turn to the type-II multiferroics.
 As mentioned before, the ferroelectricity in these materials is a result of the inversion breaking magnetic order that sets in below $T_N$.
@@ -75,9 +75,9 @@ The orthorhombic $R$Mn$_2$O$_5$ manganites have a very complex crystalline struc
 To keep the discussion tractable and in line with the experiments that were performed by our collaborators, we give a summary of the transitions and phases that are important for this chapter.
 \\\\
 $R$Mn$_2$O$_5$ have crystallographic group P$bam$ \cite{Alonso97} in the paramagnetic phase at high temperature, which is eventually lowered to P$_ab2_1a$ when the commensurate magnetic order condenses below $T_{N} \approx 33$ K.
-This order is characterised by the propagation vector $\bm{k} = (1/2, 0, 0)$, i.e. there is a unit cell doubling along the crystalline $a$-direction.
-The magnetic configuration repeats along the crystalline $c$-direction. The magnetic phase transition goes hand in hand with a sharp anomaly in the dielectric constant $\varepsilon_b$, signalling the onset of the improper ferroelectric polarization  along the $b$-direction ($P_b$) \cite{Lee13}.
-When the temperature is lowered further, $P_b$ saturates to a maximum value of around 3600 $\mu$C/m$^2$, the largest found for any rare-earth magnanite.
+This order is characterized by the propagation vector $\bm{k} = (1/2, 0, 0)$, i.e. there is a unit cell doubling along the crystalline $a$-direction.
+The magnetic configuration repeats along the crystalline $c$-direction. The magnetic phase transition goes hand in hand with a sharp anomaly in the dielectric constant $\varepsilon_b$, signaling the onset of the improper ferroelectric polarization  along the $b$-direction ($P_b$) \cite{Lee13}.
+When the temperature is lowered further, $P_b$ saturates to a maximum value of around 3600 $\mu$C/m$^2$, the largest found for any rare-earth manganite.
 However, it is still tiny compared to proper ferroelectrics like BaTiO$_3$ with $P \approx 3 \times 10^5 \mu $C/m$^2$ at room temperature \cite{Mason1948,VonHippel1950}.
 The magnetic unit cell features two non-equivalent antiferromagnetic (AFM) Mn chains, which are formed by pyramidally coordinated Mn$^{3+}$ and octahedrally coordinated Mn$^{4+}$ ions, as indicated by the light blue lines and purple polygons in Fig.~\ref{fig:GdMn2O5_unit_cell}.
 The Mn spins inside the chains lie mostly along the fourfold symmetry axis of the Mn$^{3+}$ pyramids, making angles of $\pm 23.4^\circ$ with the $a$-axis.
@@ -102,7 +102,7 @@ The energy $W$ of each bond can then be written, following Ref. \cite{Harris1972
 	W_{ij} = J(r)\bm{S}_i \cdot \bm{S}_j + \frac{\kappa \delta r^2}{2r_0},
 \end{equation}
 with spins $\bm{S}_i$ and $\bm{S}_j$, $\kappa$ the elastic stiffness of the bond, $r_0$ the mean separation between neighboring Mn$^{3+}$ and Mn$^{4+}$ ions in the paramagnetic state, and $\delta r = r - r_0$.
-Minimizing the energy of the bond energy through $\frac{\partial W}{\partial r} = 0$ then leads to the change in bondlength $\delta r$ given by 
+Minimizing the energy of the bond energy through $\frac{\partial W}{\partial r} = 0$ then leads to the change in bond-length $\delta r$ given by 
 \begin{equation}
 	\delta r = -\frac{\partial J}{\partial r}\frac{r_0}{\kappa}\bm{S}_i \cdot \bm{S}_j,
 \end{equation}
@@ -121,7 +121,7 @@ Gd$^{3+}$ is special with respect to the other magnetic rare-earth ions in the $
 This leads to a high magnetic susceptibility and associated magnetoelectric effect, surpassing the other $R$Mn$_2$O$_5$ compounds both in size and tunability of $P_b$, with a measured variation of up to 5000\,$\mu$ C/m$^2$ when a magnetic field is applied~\cite{Lee13}. 
 \\\\
 Now that the stage is set, we continue with a description of the puzzling experimental observations that motivated the study in this chapter.
-Afterwards, we continue with a description in terms of an effective spin Hamiltonian in terms of the Gd spins, and the AFM orderparameters $\bm L$ describing the two Mn chains.
+Afterwards, we continue with a description in terms of an effective spin Hamiltonian in terms of the Gd spins, and the AFM order parameters $\bm L$ describing the two Mn chains.
 We demonstrate that this description works remarkably well in order to reproduce the overall behavior that is observed in the experiments.
 After discussing the complex behavior that arises from the model, we comment on the generality of the observations, followed by a final summary of the effect. 
 %Even though the AFM intrachain superexchange interactions dominate over the AFM interchain interactions, there is nonetheless a geometric frustration due to the crystal structure, which can be seen most easily seen from the Mn pentagons surrouding the Gd atoms. This means that all AFM exchanges can not be satisfied at the same time, causing certain Mn bonds between the chains to have energetically unfavorable spin alignment. This leads to the first contribution to the ferroelectric polarization through Heisenberg exchange striction, lengthening bonds that have parallel spins and shortening those that have antiparallel ones.
@@ -176,11 +176,11 @@ To conclude this section we would like to comment that we focus on the overall s
 For example, in Fig.~\ref{fig:GdMn2O5_experiment1}(b) one can find three distinct steps that appear around 5 T during the 1$\rightarrow$2 and 3$\rightarrow$4 switching.
 These steps are, however, absent at the same field magnitude, when the system is on the 2$\rightarrow$3 and 4$\rightarrow$1 branch.
 Their origin might be related to a transition, on an ionic level, to states with higher Gd spin, or it might be related to the spins in the Mn chains rotating individually, rather than in unison as we will assume in our model.
-These features could be the subject of further research, here we choose to focus on unravelling the main behavior of the four-state loop flanked in $\phi_H$ parameter-space by two more usual two-state switching loops.
+These features could be the subject of further research, here we choose to focus on unraveling the main behavior of the four-state loop flanked in $\phi_H$ parameter-space by two more usual two-state switching loops.
 % This novel four-state switching is the focus of this chapter, and is found to originate from a unidirectional rotational motion of the spins, a sort of microscopic magnetic analogue to the crankshaft in a car, converting the linear back--and--forth variation of the magnetic field into spin rotations.
 
 \section{Modeling}
-In order to describe the puzzling experimantal observations we construct a semi classical model with eight Gd spins and two AFM order parameters that describe the Mn chains.
+In order to describe the puzzling experimental observations we construct a semi classical model with eight Gd spins and two AFM order parameters that describe the Mn chains.
 The Gd spins are described by unit vectors $\bm{S}_i, i=1..8$, and we denote the two AFM order parameters as $\bm{L}_\alpha, \alpha=1,2$ (also unit vectors). See Fig~\ref{fig:GdMn2O5_unit_cell} for further details.
 Furthermore, the electric polarization is represented by the slave order parameter $P_b$.
 Using a single $\bm{L}_\alpha$ to describe the orientation of all the Mn ions in a chain assumes that their spins are perfectly AFM ordered, i.e. $\bm{S}_i = L, \bm{S}_{i+1} = - \bm{L}$.
@@ -189,7 +189,7 @@ This simplification is justified by the large intrachain AFM exchanges, compared
 A further simplification we adopt here is to confine all spins to the $ab$-plane.
 It was shown experimentally that indeed the $c$-direction acts as the magnetic hard-axis, and that the magnetic order is repeated along the crystalline $c$-direction~\cite{Lee13}.
 This lowers the dimensionality of the problem from 3D to 2D, with a single angle for every Gd spin and Mn chain as the remaining degrees of freedom, thus greatly simplifying the numerical complexity.
-Since all spins and AFM order parameters are taken as unit vectors, their sizes are implicitely included in the model parameters.
+Since all spins and AFM order parameters are taken as unit vectors, their sizes are implicitly included in the model parameters.
 \\\\
 The first step in order to derive the effective Hamiltonian in terms of the above order parameters is to convert the microscopic interactions of the individual Mn spins into the effective interactions of the $\bm{L}_\alpha$.
 More specifically, we include energy contributions due to small spin cantings away from the perfect collinear intrachain spin configuration, as showcased in Fig.~\ref{fig:GdMn2O5_canting}.
@@ -315,7 +315,7 @@ We can identify three final terms that originate purely from the Gd spins:
 \begin{equation}
      H_S=\frac{1}{2}(g \mu_B)^2\sum_{i\neq j}\left(\frac{\bm{S}_i\cdot \bm{S}_j}{r_{ij}^3}-3\frac{(\bm{S}_i\cdot \bm{r}_{ij})(\bm{S}_j\cdot \bm{r}_{ij})}{r_{ij}^5}\right) - \sum_i\left( K_S(\bm{N}_i\cdot \bm{S}_i)^2 + g\mu_\mathrm{B} \bm{H} \cdot \bm{S}_i\right). 
 \end{equation}
-The first describes the magnetodipolar interaction between Gd spins, which could be relatively large due to the size of the spins and relative proximity to the neighbors.
+The first describes the magneto-dipolar interaction between Gd spins, which could be relatively large due to the size of the spins and relative proximity to the neighbors.
 In the numerical simulations these interactions were restricted to their five nearest neighbors, including periodic images.
 Adding further neighbors did not lead to qualitative differences in the results.
 The term with $K_S$ denotes the easy-axis anisotropy for the Gd ions, this time with anisotropy axes $\bm{N}_i$ which are unit vectors having alternating angles $\pm 12^\circ$ with respect to the $a$-axis.
@@ -346,7 +346,7 @@ That means that calculating the coefficients from first-principles calculations 
 In any case, we chose here to rather make physically inspired initial guesses for the model parameters, after which we further refined these in order to best reproduce the experimental behavior.
 \\\\
 We know, for example, that the Gd -- Mn magnetic exchange parameter towards the closest chain is larger than towards the other ($v_1>v_2$), and that the order of magnitude for this energy contribution is a couple of meV.
-Furthermore, we mentioned a couple of times already that the single-ion anisotropy energy for Gd is expected to be small due to the isotropic envirnment and valence configuration with completely quenched orbital angular momentum.
+Furthermore, we mentioned a couple of times already that the single-ion anisotropy energy for Gd is expected to be small due to the isotropic environment and valence configuration with completely quenched orbital angular momentum.
 Instead, the single-ion anisotropy of the Mn ions and, by proxy, the chains is again on the order of a couple of meV.
 Lastly, due to the large intrachain $\Jpar$ and small interchain $\Jperp$ magnetic exchanges, we know that $\gamma = \frac{\Jperp^2}{\Jpar}$ and $\chi = \frac{\Jpar}{g^2\mu_B^2}$ are very small.
 \\\\
@@ -363,7 +363,7 @@ Since the behavior only shows up at temperatures below $\sim$ 4 K, is remarkably
 This entails taking one of the degenerate starting configurations, increasing the field, minimizing the energy, applying a further increased field, and so on, thus tracking the local minimum at all steps.
 It is quite remarkable that performing this relatively simple process, purely based on optimizing the energetics of the system, leads to a faithful reproduction of the observed behavior.
 This is another indication of the topological nature of the switching behavior.
-As we will show more explicitely below, it is sort of an extreme variant of the behavior of Thouless charge pumps, and especially of the recent realization in ultracold gases. \cite{Rice82,Thouless1982,Thouless83,Lohse16,Nakajima16, Atala13}.
+As we will show more explicitly below, it is sort of an extreme variant of the behavior of Thouless charge pumps, and especially of the recent realization in ultra-cold gases. \cite{Rice82,Thouless1982,Thouless83,Lohse16,Nakajima16, Atala13}.
 It is extreme in the sense that it requires no tunneling whatsoever, which forms the core of the fully deterministic behavior.
 \\\\
 
@@ -373,7 +373,7 @@ We now turn to a discussion of the results obtained from the simulations of the 
 \begin{figure}
     \IncludeGraphics[width=0.9\linewidth]{Pb_3panels_heatmaps}
     %\includegraphics[width=\linewidth]{fig/L1L2_heatmap.png}
-    \caption{\label{fig:GdMn2O5_theory}{\bf Simulation of magnetoelectric behaviour.}
+    \caption{\label{fig:GdMn2O5_theory}{\bf Simulation of magnetoelectric behavior.}
     (a-c) Evolution of electric polarization $P_b$ during the magnetic field sweep cycle for the three angle dependent regimes. 
    In each panel, the changes of the curve color indicate the same progression of the sweep cycle as Fig~\ref{fig:GdMn2O5_experiment1}. The four-state switching is seen for the field at the magic orientation. 
     The insets indicate the corresponding switching paths and winding numbers (see Section~\ref{sec:GdMn2O5_topology}).
@@ -396,7 +396,7 @@ The background energy surfaces are chosen to reflect how the barriers at an inte
 We will come back to these statements in the next section, as they are quite crucial.
 \\\\
 In order to gain a deeper understanding of this peculiar behavior, we focus first on the energetics of the model as calculated by the simulations.
-The intricaties of the energetics are ultimately what results in the deterministic, unidirectional, switching of the system.
+The intricacies of the energetics are ultimately what results in the deterministic, unidirectional, switching of the system.
 
 \subsection{Energetics}
 Before continuing, let us take a moment to recall some of the symmetries of the system, whose transformation properties were listed in Tab.~\ref{tab:GdMn2O5_symm} during the construction of the Hamiltonian.
@@ -416,7 +416,7 @@ These symmetry operations are indicated by the black arrows of the top left pane
 \end{figure*}
 \\\\
 When the strength of the magnetic field increases, we see that two long vertical ``valleys'' appear along the $\phi_{L_1}$ direction of the energy surface, separated by $\pi$ along $\phi_{L_2}$.
-We focus on the case where the initial state of the system corresponds to the top left mininum, indicated by the bright white dot in the top left panel, and a single up--down field sweep is applied.
+We focus on the case where the initial state of the system corresponds to the top left minimum, indicated by the bright white dot in the top left panel, and a single up--down field sweep is applied.
 Following its trajectory, indicated by the shaded white lines, we find that the system flows from the original minimum to the one that is related by inversion symmetry.
 This has rotated $\phi_{L_1}$ by $\pi$, while it left $\phi_{L_2}$ unchanged.
 Through the $\bm L_1 \cdot \bm L_2$ part of the exchange striction, this causes the reversal of $P_b$ which is consistent with the inversion symmetry operation.
@@ -445,23 +445,23 @@ We thus turn to a more careful investigation of the barriers, first by studying 
 \begin{figure}[h]
     \IncludeGraphics{neb}
     \caption{\label{fig:GdMn2O5_neb}{\bf Nudged Elastic Bands calculation.}
-    a) Evolution of transition barriers between states 1, 2, 3, 4 as the magnetic field is swept through the hysteresis at $\phi_H = 10^\circ$. The plots are shifted vertically, and magnetodipolar interactions were enhanced by a factor of 5.3 for clarity. This latter increases the width of the hysteresis region. The curve colors encode the corresponding magnetic field strength. The blue circles and arrows show the trajectory of the energy minimum due to field sweeps.
+    a) Evolution of transition barriers between states 1, 2, 3, 4 as the magnetic field is swept through the hysteresis at $\phi_H = 10^\circ$. The plots are shifted vertically, and magneto-dipolar interactions were enhanced by a factor of 5.3 for clarity. This latter increases the width of the hysteresis region. The curve colors encode the corresponding magnetic field strength. The blue circles and arrows show the trajectory of the energy minimum due to field sweeps.
     b) The red square and corresponding schematic on the right shows the asymmetric evolution of the barrier from state 2 to 1, and from 2 to 3 around the critical field $H^\ast$ where the barriers are of equal height.
     }
 \end{figure}
 %
 The Nudged Elastic Band calculations are a way to track how the low points of the valley in Fig.~\ref{fig:GdMn2O5_heatmap} change for different field strengths.
-Similar to the previous discussion, we track the evolution of the sytem starting in state 1, indicated at the far left of Fig.~\ref{fig:GdMn2O5_neb}(a).
+Similar to the previous discussion, we track the evolution of the system starting in state 1, indicated at the far left of Fig.~\ref{fig:GdMn2O5_neb}(a).
 In the following we use {\it ij} to denote the energy barrier between states i and j.
 \\\\
-As the field increases (color change and vertical shift) the local minimum around state 1 becomes metastable when the barrier 12 between state 1 and 2 vanishes.
+As the field increases (color change and vertical shift) the local minimum around state 1 becomes meta-stable when the barrier 12 between state 1 and 2 vanishes.
 Notice that at the point where the system moves to state 2, i.e. when the barrier 12 vanishes, the one between 14 is still present.
 When the field is lowered, the barrier 23 lowers faster than 12, causing the system to progress to state 3.
 A similar process then brings state 3$\rightarrow$4$\rightarrow$1 during the next up--down field sweep, since the barriers 34 and 12  (14 and 23) are related by the inversion transformation and  $E_{34} = E_{12}$ ($E_{41} = E_{23}$) (see the effect of {\it I} in Fig.\ref{fig:GdMn2O5_heatmap} for a visual confirmation of this statement).
 From this analysis it is clear that indeed the barriers evolve asymmetrically when the field changes.
 This is not surprising seen as the states at the top of the barriers\footnote{They are a combination of the states on either side of the barrier.} that flank a given minimum are in no way related by symmetry.
 
-As a side note: this evolution of the potential energy surface is equivalent to that of a Thouless charge pump, in particular, the one induced by circular motion in the two-dimensional parameter space of the Rice-Mele model~\cite{Rice82} recently realized in ultracold gases \cite{Lohse16,Nakajima16,Atala13}.
+As a side note: this evolution of the potential energy surface is equivalent to that of a Thouless charge pump, in particular, the one induced by circular motion in the two-dimensional parameter space of the Rice-Mele model~\cite{Rice82} recently realized in ultra-cold gases \cite{Lohse16,Nakajima16,Atala13}.
 \\\\
 Combining the demonstration of the asymmetric evolution of the barriers in Fig.~\ref{fig:GdMn2O5_neb}, with the earlier discussion on the energy surfaces shown in Fig.~\ref{fig:GdMn2O5_heatmap} and the angle dependent trajectories shown in Fig.~\ref{fig:GdMn2O5_theory}(d-f) leads us to the following conclusion.
 When the field is applied at a low angle, the barrier between states 1 and 4 is always lower than between states 1 and 2, causing a 1$\rightarrow$4$\rightarrow$1 sequence as in Fig.~\ref{fig:GdMn2O5_theory}(a).
@@ -486,7 +486,7 @@ Indeed, when $H<H^*$ as the field decreases, this leads to $E_{23} < E_{12}$ cau
 \begin{figure}[h!]
     \centering
     \IncludeGraphics{4configs.png}
-    \caption{\label{fig:GdMn2O5_spin_configs}{\bf Magnetic configurations at $\phi_H =  10^\circ$.} The configurations corresponding to the four states are labeled by the numbers in the top left corner of each panel. Gd ions are displayed in green, Mn in purple. The cyan lines highlight the orientation of the chains. A Mn ion of chain $L_1$ and neighboring Gd ion are highlighted by the red ellips to demonstrate the 360$^\circ$ rotation in 90$^\circ$ increments.  }
+    \caption{\label{fig:GdMn2O5_spin_configs}{\bf Magnetic configurations at $\phi_H =  10^\circ$.} The configurations corresponding to the four states are labeled by the numbers in the top left corner of each panel. Gd ions are displayed in green, Mn in purple. The cyan lines highlight the orientation of the chains. A Mn ion of chain $L_1$ and neighboring Gd ion are highlighted by the red ellipse to demonstrate the 360$^\circ$ rotation in 90$^\circ$ increments.  }
     \label{fig:GdMn2O5_4configs}
 \end{figure}
 Now that we have a firm grasp of the energetics of the problem, we turn to an investigation of the behavior of the spins that results from it.
@@ -535,7 +535,7 @@ Comparing the trajectories (white lines in Fig.~\ref{fig:GdMn2O5_theory}(d-f) an
 This is true for all regimes. When $\phi_H = +10^\circ$, $\phi_{L_1}$ varies strongest, whereas for $\phi_H = -10^\circ$, $\phi_{L_2}$ varies the most.
 The system remains inside the valley that hosts the original state in both cases.
 
-In the two-state regimes (Fig.~\ref{fig:GdMn2O5_theory}(d,f)), the system remains in the neighbourhood of the starting point, with the trajectory contractible to a single point. 
+In the two-state regimes (Fig.~\ref{fig:GdMn2O5_theory}(d,f)), the system remains in the neighborhood of the starting point, with the trajectory contractible to a single point. 
 In the four-state regime in Fig.~\ref{fig:GdMn2O5_theory}(e), as we have seen, the system progresses through the entire valley in a unidirectional sense, connecting the top and bottom edges, with $\bm{L}_1$ rotating a full $360^\circ$.
 
 In this case, the path can not be fully contracted in the same way which highlights its {\em  topologically distinct} nature compared to the other two regimes.
@@ -562,7 +562,7 @@ This is not surprising, since the behavior of the Mn chains is very similar to t
 \end{figure}
 \\\\
 We have so far given a detailed description of the observed behavior, experimentally and from the simulations of our effective model.
-While the model reproduces the experiments remarkably well, and we have found that a combination of symmetries and energeticslies at the core of the peculiar switching behavior, one may wonder if this can be rationalized further.
+While the model reproduces the experiments remarkably well, and we have found that a combination of symmetries and energetics lies at the core of the peculiar switching behavior, one may wonder if this can be rationalized further.
 In attempt to do just this, we proceed in the following section with some intuitive considerations of the behavior.
 
 \subsection{Intuition}
@@ -581,8 +581,8 @@ Due to the strong interaction of the long Gd spin (S=7/2) with the magnetic fiel
 Since the field is applied at an angle smaller than the $23.4^\circ$ angle of the $\bm L_1$ easy axis, the force applied by the Gd spin pushes the chain towards one of the two flop directions.
 
 When the chain then eventually flops with an 90$^\circ$ increment, the Gd spin reorients as to optimize the exchange with the chain.
-This leads to an aligment of the Gd spin that was originally a at positive relative angle w.r.t. the field ($\phi_{Gd}>10^\circ$), to now be along a negative relative angle ($\phi_{Gd}<10^\circ$).
-When the field then decreases, the Gd rotates further in the same direction, towards negative angles, thus pulling the Mn chains towards one of the flop directions, leading to another 90$^\circ$ rotation (this time to align again with the easy axis anistropy).
+This leads to an alignment of the Gd spin that was originally a at positive relative angle w.r.t. the field ($\phi_{Gd}>10^\circ$), to now be along a negative relative angle ($\phi_{Gd}<10^\circ$).
+When the field then decreases, the Gd rotates further in the same direction, towards negative angles, thus pulling the Mn chains towards one of the flop directions, leading to another 90$^\circ$ rotation (this time to align again with the easy axis anisotropy).
 
 %
 % \begin{figure}[h]
@@ -615,7 +615,7 @@ This leaves us with the following Hamiltonian, combining two parts, one with the
 3}-3\frac{(\bm{S}_i\cdot \bm{r}_{ij})(\bm{S}_j\cdot \bm{r}_{ij})}{r_{ij}^5}\right)\nonumber.
 \end{align}
 Due to the symmetries of this simplified model and the geometry of the material we end up with two copies of one spin in the first half of the magnetic unit cell and one in the second half of the unit cell, with the chain in between (see Fig.~\ref{fig:GdMn2O5_simple_model}).
-This necessitates $S_2 = S_3$ and $S_6 = S_7$, and thus allows us to consider one of the two copies. Again, we keep only nearest-neighbor magnetodipolar terms, and arrive to
+This necessitates $S_2 = S_3$ and $S_6 = S_7$, and thus allows us to consider one of the two copies. Again, we keep only nearest-neighbor magneto-dipolar terms, and arrive to
 \begin{align}
 	H' &= 2v_1(\bm{S}_3 - \bm{S}_6)\cdot\bm{L}_1 - 2g \mu_B (\bm{S}_3 + \bm{S}_6) 
 \cdot \bm{H} \\
@@ -632,12 +632,12 @@ as a minimal model that still demonstrates the crankshaft-like behavior.
 \section{Conclusions}
 We used a relatively general and simple, quasi-classical spin model in order to describe a never before observed four-state switching loop in GdMn$_2$O$_5$.
 The model reproduces the experimental measurements well, and from further analysis it leads to the conclusion that this behavior is topologically protected by the presence of two, more normal, two-state magnetoelectric switching regimes.
-While we deviced a set of model parameters to reproduce the behavior in GdMn$_2$O$_5$, it turns out that a wide set of model parameters can generate the same behavior.
+While we devised a set of model parameters to reproduce the behavior in GdMn$_2$O$_5$, it turns out that a wide set of model parameters can generate the same behavior.
 Furthermore, due to the topological nature of the effect, we posit that the screening for further materials exhibiting a similar behavior would be relatively simple since only high and low angle regimes need to be identified.
 The magic angle boundary region will then necessarily exist at an intermediate angle.
 
 We also found that the novel four-state regime comes together with a unique large-amplitude collective mode -- the full-circle rotation of half the spins.
-The robust unidrectional spin rotation originates from the asymmetric evolution of the energy landscape, and corresponds to an incontractible loop in the order parameter space, ultimately leading to the topological nature of the switching in this material.
+The robust unidirectional spin rotation originates from the asymmetric evolution of the energy landscape, and corresponds to an in-contractible loop in the order parameter space, ultimately leading to the topological nature of the switching in this material.
 This is a microscopic analogue to the crankshaft in a car, transforming linear back-and-forth motion of the applied magnetic field (the piston) into circular motion of the spins (crankshaft).
 Due to different behavior of the two chains in GdMn$_2$O$_5$, i.e. one doing a full-circle rotation while the other toggles, the double sweep of the magnetic field is accompanied by two reversals of the electric polarization.
 %
