--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -7,17 +7,17 @@ This forms the base for understanding the more complex, inhomogeneous, scenarios
 
 We can associate an order parameter (OP) that describes the order that develops as a result of this symmetry breaking. It is thus zero above $T_c$ and nonzero below.
 The energy potential for the OP obeys the same symmetries as the parent structure, and will thus have as many degenerate minima as the dimensionality of the transformation operator that describes the broken symmetry.
-Each of these minima are associated with a different direction of the OP, and can be transformed into eachother by applying the symmetry operator. 
+Each of these minima are associated with a different direction of the OP, and can be transformed into each other by applying the symmetry operator. 
 The symmetry related orientations of the OP are thus completely equivalent from an energetic point of view.
 
 For example, we saw previously that in GdMn$_2$O$_5$ there are two primary OPs, $\bm{L}_1$ and $\bm{L}_2$, describing the antiferromagnetic order inside each Mn chain.
-It was shown that there are four combinations of these that have the same energy. They can be transformed into eachother by the time-reversal and inversion symmetry operators. 
+It was shown that there are four combinations of these that have the same energy. They can be transformed into each other by the time-reversal and inversion symmetry operators. 
 In Chromium a similar antiferromagnetic OP has two energy equivalent values, again related by time-reversal symmetry.
 
 During a phase transition in a large system, regions that are separated in space will each individually acquire one of these equivalent values for the OP.
 Such regions are referred to as domains, with the narrow boundaries between them called domain walls (DWs) inside of which the OP is interpolated.
 
-There are some ways to achieve a completely homogeneous situation. One example is through poling, where an external field is applied during the phase transtion to coax the system towards one of the orientations of the OP.
+There are some ways to achieve a completely homogeneous situation. One example is through poling, where an external field is applied during the phase transition to coax the system towards one of the orientations of the OP.
 Another is through expelling the DWs in the sample by keeping it close to the phase transition.
 This happens because at the DWs the OP is forced away from the minimum, making them energetically less favorable than a uniform domain.
 Consequently, by keeping the system close to the phase transition for an extended period, it is sometimes possible to expel the DWs from the material.
@@ -26,7 +26,7 @@ In the case of ferromagnetic or ferroelectric materials, this is process is usua
 These favor an antiparallel orientation of the OP in neighboring domains, making it energetically impossible to have a single uniform domain when the sample size increases.
 \begin{figure}[h]
 	\IncludeGraphics{depolarizing_schematic}
-	\caption{\label{fig:BTO_depolarizing_schematic}{\bf Depolarizing fields.} a) A single domain. b) At a domain wall between two domains with opposite polarization. In both panels the dipoles are shown by the ovals leading to the polarization denoted by the yellow arrows. The associated depolarizing electric fields are shown by the red arrows. The orienation of these fields is such that for the single domain in panel (a) the depolarizing energy is large compared with that of the two domains in panel (b).}    
+	\caption{\label{fig:BTO_depolarizing_schematic}{\bf Depolarizing fields.} a) A single domain. b) At a domain wall between two domains with opposite polarization. In both panels the dipoles are shown by the ovals leading to the polarization denoted by the yellow arrows. The associated depolarizing electric fields are shown by the red arrows. The orientation of these fields is such that for the single domain in panel (a) the depolarizing energy is large compared with that of the two domains in panel (b).}    
 \end{figure}
 
 It is thus clear that DWs will be present more often than not, with their density influenced by factors such as poling, cooling rate, and sample quality \cite{Griffin2012,Shen2018,Nataf2020}.
@@ -42,7 +42,7 @@ This relatively low energy cost associated with the DW movement will also turn o
 \\\\
 Because of the scaling down of technological devices into the nanoscale realm, the focus has more and more shifted towards the DWs themselves as the subject of study, rather than just as being the boundaries between domains.
 The physics that govern the region of the DW is usually richer than that of the domains. One of the reasons is that, as we mentioned before, the OP is locally forced away from the energetic minimum.
-In the case of a double well potential (or so-called mexican hat potential), associated with many second order phase transitions, the OP at the center of the wall is at the top of the barrier.
+In the case of a double well potential (or so-called Mexican hat potential), associated with many second order phase transitions, the OP at the center of the wall is at the top of the barrier.
 The curvature of the energy potential is inverted at this top, which has been argued to make perturbing the OP easier at the DW \cite{Scott2012}.
 The electronic bandstructure is also different in the wall compared with the domains, due to the local structural differences.
 This can lead to enhanced conductivity, photovoltages, and current rectification \cite{Korbel2020,Huyan2019}.
@@ -69,7 +69,7 @@ Its contribution to the free energy density can be written as:
 where $q_{ijkl}$ denotes the strength of the coupling, the indices $i, j, k, l$ again iterate through $x, y, z$, and Einstein summation over repeated indices is implied.
 The longitudinal part, $q_{iiii} \varepsilon_{ii} (P_i)^2$, leads to the largest contribution to the strain, causing the material to stretch along $P_i$.
 
-Due to the high degree of symmetry in crystals, many equivalent orientations of $P$ are possible, each with an associated strain. The DWs separating these are equally numerous, and have a distinct strain texture due to the variation of $P$ accross the DW.
+Due to the high degree of symmetry in crystals, many equivalent orientations of $P$ are possible, each with an associated strain. The DWs separating these are equally numerous, and have a distinct strain texture due to the variation of $P$ across the DW.
 
 For example, a 180$^\circ$ degree DW separates domains with completely anti-parallel $P$ vectors.
 Due to the square dependence on $P$ of the energy in Eq.~\eqref{eq:qpp}, $\varepsilon$ will be identical in both domains. Still, the different values of $P$ inside the wall versus in the domains will cause a local variation of $\varepsilon$. More precisely, the strain is diminished at the wall since $P=0$, leading to an indentation at the surface of the material.
@@ -98,7 +98,7 @@ This is because these studies usually involve the application of a tip to the su
 As mentioned before, however, even 180$^\circ$ DWs have a distinct strain texture associated to them, which extends much further than the narrow region in which the polarization reverses.
 This texture can be picked up mechanically by the applied tip and ultimately allows one to make the observations that will be discussed in the next section, and are at the base of the research presented in this Chapter.
 
-Afterwards, we continue with a small overview of the crystalline properties of BaTiO$_3$, an archetypical example of a ferroelectric perovskite.
+Afterwards, we continue with a small overview of the crystalline properties of BaTiO$_3$, an archetypal example of a ferroelectric perovskite.
 This is followed by a detailed theoretical study and numerical simulation of the experimental observations, and finally a conclusion summarizing the results.
 
 \section{Experimental}
@@ -115,7 +115,7 @@ These walls are often referred to in the literature as twin walls, separating so
 
 \begin{figure}
 	\IncludeGraphics{experimental}
-	\caption{\label{fig:BTO_experiment} {\bf Experimental Measurements} Two regions of the BTO sample are characterized. Panels (a,b) show a region with mostly straight DWs. Panels (c-f) show a more complex region with bubble domains, and a twin-wall separating the top left area with out-of-plane polarization from the bottome right area with in-plane polarization (along the $a$-direction). Panels (a,c) show the PFM phase, panel (d) the out-of-plane PFM amplitude, and panel (f) displays a schematic representation of the polarization, reconstructed from these measurements. Panels (b,e) show the CRFM measurements, demonstrating softer DW regions (brown) and stiffer domains (purple).}
+	\caption{\label{fig:BTO_experiment} {\bf Experimental Measurements} Two regions of the BTO sample are characterized. Panels (a,b) show a region with mostly straight DWs. Panels (c-f) show a more complex region with bubble domains, and a twin-wall separating the top left area with out-of-plane polarization from the bottomed right area with in-plane polarization (along the $a$-direction). Panels (a,c) show the PFM phase, panel (d) the out-of-plane PFM amplitude, and panel (f) displays a schematic representation of the polarization, reconstructed from these measurements. Panels (b,e) show the CRFM measurements, demonstrating softer DW regions (brown) and stiffer domains (purple).}
 \end{figure}
 
 In order to probe the spatial variation of the stiffness of the sample, measurements based on contact resonance frequency microscopy (CRFM) were performed.
@@ -125,7 +125,7 @@ This technique is based on scanning probe microscopy where an atomic force micro
 	\caption{\label{fig:BTO_experimental_schematic} {\bf Schematic of the CRFM setup.} a) The tip is placed on a cantilever and brought into contact with the sample surface. The combined cantilever-surface system acts as a series of two springs, with spring constants indicated by $k_{\rm tip}$ and $k_{\rm sample}$, respectively. b) A pictorial representation of the 180$^\circ$ domain wall. The polarization direction is indicated by the arrows, and up and down domains are colored blue and red, respectively. The increased depth of indentation at the wall indicates the softening effect.}
 \end{figure}
 The maximal mechanical load was 20 micro Newtons, and the surface contact of the tip is estimated to be 7 nm.
-The combined system of the cantilever and the sample then acts as a series of springs, whose resonance frequence can be measured as a probe of the local stiffness of the sample~\cite{Rabe2000}.
+The combined system of the cantilever and the sample then acts as a series of springs, whose resonance frequency can be measured as a probe of the local stiffness of the sample~\cite{Rabe2000}.
 In a nutshell, Hooke's law states that the resonance frequency of a linear spring is given by $\omega = \sqrt{\frac{k}{m}}$, thus when the sample has a higher stiffness $k$, it leads to a higher resonance frequency of the tip-sample spring.
 A map of the local stiffness of the sample is then created by scanning the tip across the sample while measuring this resonance frequency, as shown in Fig.~\ref{fig:BTO_experiment}(b,e).
 The only limiting factor of the spatial resolution is the scanning speed and total duration of the experiment.  
@@ -146,7 +146,7 @@ We now turn to a short summary of BTO.
 \section{Barium Titanate}
 As mentioned previously, BTO is not special from the point of view of the DW softening, and all 180$^\circ$ ferroelectric DWs should demonstrate the same behavior.
 
-BaTiO$_3$ is chosen here because it is a well studied archetypical example of an ABO$_3$ perovskite.
+BaTiO$_3$ is chosen here because it is a well studied archetypal example of an ABO$_3$ perovskite.
 It has a ferroelectric polarization $P \approx 30 \times 10^5 \mu $C/m$^2$ at room temperature \cite{Mason1948, VonHippel1950, Ghosez1994}.
 Due to its excellent dielectric, piezoelectric and photorefractive properties, it can be found in many devices like capacitors \cite{American1963}, electromechanical transducers \cite{Schofield1957} and nonlinear optics \cite{Ramakanth2015}.
 
@@ -335,7 +335,7 @@ We therefore turn to to the strain texture of the DW as the possible source of t
 The crux of the matter is that due to the fundamentally different structure of the DW, additional soft phonon modes appear which are not present in the domain \cite{Chen2020}.
 The two most important ones are the breathing and sliding modes, shown in Fig.~\ref{fig:BTO_breathing_sliding}(a,b), respectively.
 These can can be excited mechanically by the applied tip, ultimately making the DW appear softer.
-Both appear as a result of the above described diminished strain at the wall, resuling in a dip at the surface of the material, as shown in Fig.~\ref{fig:BTO_wall}.
+Both appear as a result of the above described diminished strain at the wall, resulting in a dip at the surface of the material, as shown in Fig.~\ref{fig:BTO_wall}.
 The breathing mode is associated with a change of the width of this dip (see Fig.~\ref{fig:BTO_breathing_sliding}(a)).
 When a tip with a wider radius than the dip is pressed into the material, it will apply a force on either side of the wall, increasing its width.
 This is favorable for the Ginzburg part $\partial_i P_j \partial_k P_l$ of the free energy density, since wider walls have lower $\partial_i P_j$.
@@ -350,7 +350,7 @@ The sliding mode, shown in Fig.~\ref{fig:BTO_breathing_sliding}(b), instead desc
 
 \begin{figure}
 	\IncludeGraphics{breathing_sliding}
-	\caption{\label{fig:BTO_breathing_sliding}{\bf Breathing and Sliding modes.} a) Demonstration of the widing of the DW upon application of a tip. The higher the force of the tip, the wider the wall becomes. The wall is not centered at 0 because of the mumerical Peierls-Nabarro and mesh dimensions, however, the applied force is centered exactly above the wall. b) Pictorial demonstration of the sliding mode.}
+	\caption{\label{fig:BTO_breathing_sliding}{\bf Breathing and Sliding modes.} a) Demonstration of the widening of the DW upon application of a tip. The higher the force of the tip, the wider the wall becomes. The wall is not centered at 0 because of the numerical Peierls-Nabarro and mesh dimensions, however, the applied force is centered exactly above the wall. b) Pictorial demonstration of the sliding mode.}
 \end{figure}
 
 This brings us, finally, to what we claim as the main contributor of the softening effect.
@@ -398,7 +398,7 @@ This means we rewrite the equations in Eq.~\eqref{eq:BTO_energy} by filling in $
 
 To solve the model, we thus have to compute and minimize the total free energy by integrating the density (Eq.~\eqref{eq:BTO_energy}) over the entire system.
 The density is written in terms of the values and gradients of the two order parameters $P$ and $u$.
-In the coninuum formulation, these are defined at each point in space and are thus sometimes referred to as fields, with the models referred to as phase field model.
+In the continuum formulation, these are defined at each point in space and are thus sometimes referred to as fields, with the models referred to as phase field model.
 Finding the values of $P$ and $u$ that minimize the total free energy $F[P,u]=\int_V d\bm{r} f(\bm{P}(\bm{r}),\bm{u}(\bm{r}))$ then leads to equilibrium configuration of the system.
 
 We perform this integration numerically, due to the complexity of Eq.~\eqref{eq:BTO_energy} and the non homogeneous situation that occurs when a tip is applied.
@@ -452,7 +452,7 @@ It also allows for a great flexibility through the density of the chosen grid, t
 	\caption{\label{fig:BTO_fem}{\bf Finite Element Method.} a) Isoparametric local coordinate system for a triangular element. Image taken from Ref.~\cite{Biner}. b) 2D geometry spanned by triangular mesh demonstrating the flexibility of FEM meshes. Image taken from Ref.~\cite{2Dmesh}. c) Example of the geometry that is used in our simulations. d) Zoom in on the corner of the mesh shown in (c).}
 \end{figure}
 
-We devoped our own code in order to run the FEM simulations, based on the building blocks supplied by the \href{https://github.com/KristofferC/JuAFEM.jl}{JuAFEM.jl} package.
+We developed our own code in order to run the FEM simulations, based on the building blocks supplied by the \href{https://github.com/KristofferC/JuAFEM.jl}{JuAFEM.jl} package.
 We use a rectangular geometry uniformly spanned by tetrahedron elements, as shown in Fig.~\ref{fig:BTO_fem}(c,d).
 This choice is made since the uniform mesh mimics numerically the Peierls-Nabarro barriers that are created by the lattice of the crystal.
 As will be discussed further below, these pin the wall to a certain degree and should be taken into account for the simulation to be realistic.
@@ -467,13 +467,13 @@ The forward mode method in ForwardDiff.jl uses dual numbers that carry the infor
 For further information see Ref.~\cite{Hoffmann2016}.
 
 Using the parameters from previous ab-initio results \cite{Marton2010} and reported in Tab.~\ref{tab:BTO_param}, we first optimized the equilibrium situation for both a uniform domain and a single domain wall, the result of which is shown in Fig.~\ref{fig:BTO_wall}.
-A gaussian force field, $\frac{a}{\sigma \sqrt{2\pi}}e^{-\frac{(x-x_{\rm tip})^2}{2\sigma^2}}$ with $\sigma = 1 \cdot 10^{-9}$ representing the diameter of the contact area and $a = 1 \cdot 10^{-18} \frac{eV}{nm^3}$, was then applied at various positions $x_{\rm tip}$ throughout both geometries.
+A Gaussian force field, $\frac{a}{\sigma \sqrt{2\pi}}e^{-\frac{(x-x_{\rm tip})^2}{2\sigma^2}}$ with $\sigma = 1 \cdot 10^{-9}$ representing the diameter of the contact area and $a = 1 \cdot 10^{-18} \frac{eV}{nm^3}$, was then applied at various positions $x_{\rm tip}$ throughout both geometries.
 
 The single domain simulation is used to gauge the influence of finite-size effects that are inherently present in our simulations due to the extended strain texture, finite geometry and open boundary conditions.
 \lp{rewrite}
 This causes the indentation caused by a tip at the center to be smaller than when it is applied to one side, due to less supporting material.
 The effect this has on the simulations is shown in Fig.~\ref{fig:BTO_numerical_effects}(a,b).
-Since this is unphysical, we compensate for this by adding the differences to the results in the geometry with a wall present.
+Since this is nonphysical, we compensate for this by adding the differences to the results in the geometry with a wall present.
 
 To conclude this section, we would like to comment on the issue of the Peierls-Nabarro barriers \cite{Peierls1940,Nabarro1947}, since they are of great influence on the movement of the DW.
 In essence, it is a result from the non-homogeneity of the crystalline lattice on the unit-cell length scale.
@@ -483,11 +483,11 @@ As mentioned before the purely continuum GLD model we use does not account for t
 The DW sliding is therefore completely free, which is at odds with the real behavior.
 We are thus faced with the commonly reappearing issue of having to simulate physics that occur at different length scales.
 
-In this case, however, we are to some extent saved by a spurious numerical effect that mimics the naturally occuring Peierls-Nabarro barrier.
+In this case, however, we are to some extent saved by a spurious numerical effect that mimics the naturally occurring Peierls-Nabarro barrier.
 This was investigated by Marton in Ref.~\cite{Marton2018} for the case of BTO.
 It boils down to the fact that through the approximated interpolation of the fields, it is numerically favorable to situate the center of the wall at a node, rather than inside an element.
 In this way the simulation avoids sampling the paraelectric state, which is at the top of the double-well potential of Landau part $f_l$ of the energy in Eq.~\eqref{eq:BTO_energy}, and causes the non-zero $P$ in the domains.
-When the wall is forced to move accross the grid due to the applied tip, it is forced to overcome this high-energy configuration in order to transition between equilibrium positions.
+When the wall is forced to move across the grid due to the applied tip, it is forced to overcome this high-energy configuration in order to transition between equilibrium positions.
 This in turn causes the numerical analogue of the Peierls-Nabarro barrier.
 
 \section{Results}
@@ -520,7 +520,7 @@ Two sets of simulations were performed, one for which the bottom of the wall was
 The results of the former are shown in Fig.~\ref{fig:BTO_bending_sim}, and of the latter in Fig.~\ref{fig:BTO_sliding_sim}.
 \begin{figure}[h!]
 	\IncludeGraphics{2D_bending}
-	\caption{\label{fig:BTO_bending_sim}{\bf Bending Wall} Simulations where the bottom of the wall is kept fixed to the equilibrium without a tip. In each panel, the coloring indicates the position where the tip is aplied to the sample. a) Surface profile of the wall. b) Polarization distribution at the surface. c) Deformation of the surface after applying the tip. d) Maximum absolute value of the deformation in (c). e) Relative stiffness depending on where the tip is applied. f) Strain profile when tip is too far from wall to make it bend. g) When the tip is close enough, the wall will bend. In panels (f, g) the vertical white line denotes the equilibrium position of the wall, and the dashed its position after the tip is applied.}
+	\caption{\label{fig:BTO_bending_sim}{\bf Bending Wall} Simulations where the bottom of the wall is kept fixed to the equilibrium without a tip. In each panel, the coloring indicates the position where the tip is applied to the sample. a) Surface profile of the wall. b) Polarization distribution at the surface. c) Deformation of the surface after applying the tip. d) Maximum absolute value of the deformation in (c). e) Relative stiffness depending on where the tip is applied. f) Strain profile when tip is too far from wall to make it bend. g) When the tip is close enough, the wall will bend. In panels (f, g) the vertical white line denotes the equilibrium position of the wall, and the dashed its position after the tip is applied.}
 \end{figure}
 \begin{figure}[h!]
 	\IncludeGraphics{2D_sliding}
