--- a/papers/references.bib
+++ b/papers/references.bib
@@ -6621,3 +6621,109 @@ volume = {39},
 year = {1989}
 }
 
+@article{Perdew1993,
+author = {Perdew, John P. and Chevary, J. A. and Vosko, S. H. and Jackson, Koblar A. and Pederson, Mark R. and Singh, D. J. and Fiolhais, Carlos},
+doi = {10.1103/PhysRevB.48.4978.2},
+file = {:home/ponet/Downloads/PhysRevB.46.6671.pdf:pdf},
+issn = {0163-1829},
+journal = {Physical Review B},
+month = {aug},
+number = {7},
+pages = {4978--4978},
+title = {{Atoms, molecules, solids, and surfaces: Applications of the generalized gradient approximation for exchange and correlation}},
+url = {https://link.aps.org/doi/10.1103/PhysRevB.48.4978.2},
+volume = {48},
+year = {1993}
+}
+
+@article{Perdew1985,
+abstract = {The density-gradient expansion of the fermion exchange hole is analyzed in real space. Unlike the local-density approximation, the second-order gradient-expansion approximation is found to violate two important properties of the exact hole: The exact hole is negative everywhere, and represents a deficit of one electron. Imposition of these exact constraints leads to an accurate new density functional for the exchange energy. Residual errors in the exchange energy for atoms are about 1{\%} of this quantity. The new functional approximation may be generalized to include correlation. {\textcopyright} 1985 The American Physical Society.},
+author = {Perdew, John P.},
+doi = {10.1103/PhysRevLett.55.1665},
+file = {:home/ponet/Downloads/PhysRevLett.55.1665.pdf:pdf},
+issn = {0031-9007},
+journal = {Physical Review Letters},
+month = {oct},
+number = {16},
+pages = {1665--1668},
+title = {{Accurate Density Functional for the Energy: Real-Space Cutoff of the Gradient Expansion for the Exchange Hole}},
+url = {https://link.aps.org/doi/10.1103/PhysRevLett.55.1665},
+volume = {55},
+year = {1985}
+}
+
+@article{Perdew1986,
+abstract = {The electronic exchange energy as a functional of the density may be approximated as Ex[n]=Ax d3rn43F(s), where s=n|2kFn, kF=(32n)13, and F(s)=(1+1.296s2+14s4+0.2s6)115. The basis for this approximation is the gradient expansion of the exchange hole, with real-space cutoffs chosen to guarantee that the hole is negative everywhere and represents a deficit of one electron. Unlike the previously publsihed version of it, this functional is simple enough to be applied routinely in self-consistent calculations for atoms, molecules, and solids. Calculated exchange energies for atoms fall within 1{\%} of Hartree-Fock values. Significant improvements over other simple functionals are also found in the exchange contributions to the valence-shell removal energy of an atom and to the surface energy of jellium within the infinite barrier model. {\textcopyright} 1986 The American Physical Society.},
+author = {Perdew, John P. and Yue, Wang},
+doi = {10.1103/PhysRevB.33.8800},
+file = {:home/ponet/Downloads/PhysRevB.33.8800.pdf:pdf},
+issn = {0163-1829},
+journal = {Physical Review B},
+month = {jun},
+number = {12},
+pages = {8800--8802},
+pmid = {9938293},
+title = {{Accurate and simple density functional for the electronic exchange energy: Generalized gradient approximation}},
+url = {https://link.aps.org/doi/10.1103/PhysRevB.33.8800},
+volume = {33},
+year = {1986}
+}
+@article{Hamann1979,
+abstract = {A very simple procedure to extract pseudopotentials from ab initio atomic calculations is presented. The pseudopotentials yield exact eigenvalues and nodeless eigenfunctions which agree with atomic wave functions beyond a chosen radius rc. Moreover, logarithmic derivatives of real and pseudo wave functions and their first energy derivatives agree for r{\textgreater}rc guaranteeing excellent transferability of the pseudopotentials. {\textcopyright} 1979 The American Physical Society.},
+author = {Hamann, D. R. and Schl{\"{u}}ter, M. and Chiang, C.},
+doi = {10.1103/PhysRevLett.43.1494},
+file = {:home/ponet/Downloads/PhysRevLett.43.1494.pdf:pdf},
+issn = {0031-9007},
+journal = {Physical Review Letters},
+month = {nov},
+number = {20},
+pages = {1494--1497},
+title = {{Norm-Conserving Pseudopotentials}},
+url = {https://link.aps.org/doi/10.1103/PhysRevLett.43.1494},
+volume = {43},
+year = {1979}
+}
+@article{Louie1982,
+abstract = {A new method for generating and using first-principles pseudopotentials is developed to treat explicitly the nonlinear exchange and correlation interaction between the core and the valence charge densities. Compared to existing potentials, the new scheme leads to significant improvement in the transferability of the potential. In particular, the spin-polarized configurations are well described with a single potential. The need for separate spin-up and spin-down ionic pesudopotentials is, thus, eliminated. The method can easily be implemented with minimal increase in computational effort. Results for both atoms and solids are demonstrated. {\textcopyright} 1982 The American Physical Society.},
+author = {Louie, Steven and Froyen, Sverre and Cohen, L},
+file = {:home/ponet/Downloads/PhysRevB.26.1738.pdf:pdf},
+journal = {Physical Review B},
+number = {4},
+pages = {1738--1742},
+title = {{Nonlinear ionic Pseudopotentials}},
+url = {http://link.aps.org/doi/10.1103/PhysRevB.26.1738{\%}0Apapers3://publication/doi/10.1103/PhysRevB.26.1738},
+volume = {26},
+year = {1982}
+}
+
+@article{Vanderbilt1990,
+abstract = {These instructions indicate how to prepare a manuscript for rapid publication in GASTROENTEHOLOGY and exemplify the exact format to follow. {\textcopyright} 1977, The Williams {\&} Wilkins Co.. All rights reserved.},
+author = {Vanderbilt, David},
+doi = {10.1103/PhysRevB.41.7892},
+file = {:home/ponet/Downloads/PhysRevB.41.7892.pdf:pdf},
+issn = {0163-1829},
+journal = {Physical Review B},
+month = {apr},
+number = {11},
+pages = {7892--7895},
+pmid = {18235770},
+title = {{Soft self-consistent pseudopotentials in a generalized eigenvalue formalism}},
+url = {https://link.aps.org/doi/10.1103/PhysRevB.41.7892},
+volume = {41},
+year = {1990}
+}
+
+@article{Joubert1999,
+abstract = {The formal relationship between ultrasoft (US) Vanderbilt-type pseudopotentials and Bl{\"{o}}chl's projector augmented wave (PAW) method is derived. It is shown that the total energy functional for US pseudopotentials can be obtained by linearization of two terms in a slightly modified PAW total energy functional. The Hamilton operator, the forces, and the stress tensor are derived for this modified PAW functional. A simple way to implement the PAW method in existing plane-wave codes supporting US pseudopotentials is pointed out. In addition, critical tests are presented to compare the accuracy and efficiency of the PAW and the US pseudopotential method with relaxed core all electron methods. These tests include small molecules (Formula presented) and several bulk systems (diamond, Si, V, Li, Ca, (Formula presented) Fe, Co, Ni). Particular attention is paid to the bulk properties and magnetic energies of Fe, Co, and Ni. {\textcopyright} 1999 The American Physical Society.},
+author = {Joubert, D.},
+doi = {10.1103/PhysRevB.59.1758},
+file = {:home/ponet/Downloads/PhysRevB.59.1758.pdf:pdf},
+issn = {1550235X},
+journal = {Physical Review B - Condensed Matter and Materials Physics},
+number = {3},
+pages = {1758--1775},
+title = {{From ultrasoft pseudopotentials to the projector augmented-wave method}},
+volume = {59},
+year = {1999}
+}
+
